# Syncify

./: .breakpoints  .gitignore  LICENSE  Makefile  README copy.md  README.md  classes.py  config.py  main.py  newmain.py  pyproject.toml  requirements.txt  utils.py
.github/ISSUE_TEMPLATE/: backend_bug_report.yml  bug_report.md  feature_bug_report.yml  html_css_visual_bug.yml
.github/ISSUE_TEMPLATE /: bug.yml
.github/workflows/: bandit.yml  codeql.yml
Ideas/: notes.txt
OldSyncifyWeb/: __init__.py  routes.py  sock.py
OldSyncifyWeb/templates/: onboard.html
OldSyncifyWeb/utils/: classes.py  config.py  terminal.py
Plugin/: install.ps1  syncify.js
Syncify/: __init__.py  oauth.py  routes.py  sock.py
Syncify/config/: config.jsonc
Syncify/templates/: bugreport.html  challenge.html  join.html  login.html  new.html  onboard.html  room.html  user.html
Syncify/utils/: config.py  jsonfile.py  terminal.py
SyncifyApp/: index.js  manifest.json  style.css
SyncifyExt/: command  syncify.js
SyncifyWeb/: __init__.py  oauth.py  routes.py  sock.py
SyncifyWeb/config/: config.jsonc
SyncifyWeb/templates/: challenge.html  join.html  room.html
SyncifyWeb/utils/: classes.py  config.py  jsonfile.py
dev/: notes.txt
dev/media/: room-how-it-works.drawio
src/: __init__.py  oauth.py  oldmain.py  routes.py  sock.py  utils.py
src/ideas/: .notes.txt  notes.txt  site-tree.drawio
static/: default.css  join.css  login.css  new.css  new.js  session.css  session.js  user.css
templates/: index.html  join.html  login.html  new.html  newjoin.html  session.html  user.html
(+60 files in other folders)
